ajout de quelques modifications
